# bitbot_cifx_demo_2

./: CMakeLists.txt  README.md  fall1_positions.xml  main.cpp  mapping.txt  reset_positions.xml  sc_arm.xml  sc_bhr8fc2.xml  setting.json  user_func.cpp  user_func.h
